Fixed longer names overflowing

--- a/src/components/ListItem/ListItem.module.css
+++ b/src/components/ListItem/ListItem.module.css
@@ -6,11 +6,11 @@
     border-radius: 10px;
     overflow: hidden;
     display: grid;
-    grid-template-rows: 50px 0;
+    grid-template-rows: auto 0;
     transition: all 0.1s;
 }
 .item.expandedItem {
-    grid-template-rows: 50px auto;
+    grid-template-rows: auto auto;
     transition: all 0.1s;
 }
 .item .mainSection {
@@ -21,6 +21,7 @@
     grid-template-columns: 30px 1fr auto;
     align-items: center;
     gap: 10px;
+    padding: 10px 0;
 }
 .item .moreMeta {
     display: flex;
